src/base/objects/Lead/fields/Asset_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Asset_Under_Management__c</fullName>
    <label>Asset Under Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$50M</fullName>
            </value>
            <value>
                <fullName>$50 - $250M</fullName>
            </value>
            <value>
                <fullName>$250M+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>