src/base/objects/Lead/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>