src/base/objects/Lead/fields/Blocker_Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Revisit_Date__c</fullName>
    <description>[SFCC-576]: Ecosystem Wallet Lead Record Type Field</description>
    <inlineHelpText>New information should be available by this date or the lead is expected to be unblocked by this date.</inlineHelpText>
    <label>Blocker Revisit Date</label>
    <type>Date</type>
</CustomField>