src/base/objects/Lead/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 10</fullName>
            </value>
            <value>
                <fullName>11 - 50</fullName>
            </value>
            <value>
                <fullName>51 - 200</fullName>
            </value>
            <value>
                <fullName>201 - 1000</fullName>
            </value>
            <value>
                <fullName>1001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>