src/base/objects/Lead/fields/Converted_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Lead Id</label>
    <type>Text</type>
</CustomField>