src/base/objects/Lead/fields/Country_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Country_Attributes__c</fullName>
    <label>Country Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorporation</fullName>
            </value>
            <value>
                <fullName>Business Operations</fullName>
            </value>
            <value>
                <fullName>Customer Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>