src/base/objects/Lead/fields/Customer_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Subsegment__c</fullName>
    <label>Customer Subsegment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Customer_Subsegment</valueSetName>
    </valueSet>
</CustomField>