src/base/objects/Lead/fields/Discord_Server__c.field-meta.xml
<CustomField>
    <fullName>Discord_Server__c</fullName>
    <label>Discord Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>