src/base/objects/Lead/fields/Lead_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Close_Reason__c</fullName>
    <label>Lead Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Alternative / Competitor</fullName>
            </value>
            <value>
                <fullName>Incorrect / Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Spam / Phishing</fullName>
            </value>
            <value>
                <fullName>Other Coinbase</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t want to work with Coinbase</fullName>
            </value>
            <value>
                <fullName>Prioritization</fullName>
            </value>
            <value>
                <fullName>Project Paused/Discontinued</fullName>
            </value>
            <value>
                <fullName>Quid Pro-Quo</fullName>
            </value>
            <value>
                <fullName>Technical Blocker</fullName>
            </value>
            <value>
                <fullName>Unsupported Protocol</fullName>
            </value>
            <value>
                <fullName>Unresponsive (60 days+)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Limited Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>