src/base/objects/Lead/fields/Lead_Close_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Close_Reason_Comments__c</fullName>
    <description>[SFCC-576]: Ecosystem Wallet Lead Record Type Field</description>
    <label>Lead Close Reason Comments</label>
    <type>TextArea</type>
</CustomField>