src/base/objects/Lead/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <description>Short description to add on list views</description>
    <inlineHelpText>255 Characters of Description field</inlineHelpText>
    <label>Lead Description</label>
    <type>TextArea</type>
</CustomField>