src/base/objects/Lead/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>