src/base/objects/Lead/fields/LinkedIn_AdForm_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_AdForm_Response_ID__c</fullName>
    <externalId>true</externalId>
    <label>LinkedIn AdForm Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>