src/base/objects/Lead/fields/LinkedIn_Advertiser_Account__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Advertiser_Account__c</fullName>
    <label>LinkedIn Advertiser Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>