src/base/objects/Lead/fields/LinkedIn_Campaign__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Campaign__c</fullName>
    <label>LinkedIn Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>