src/base/objects/Lead/fields/LinkedIn_Creative__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Creative__c</fullName>
    <label>LinkedIn Creative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>