src/base/objects/Lead/fields/LinkedIn_Form__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Form__c</fullName>
    <label>LinkedIn Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>