src/base/objects/Lead/fields/LinkedIn_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Lead_Type__c</fullName>
    <label>LinkedIn Lead Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>