src/base/objects/Lead/fields/LinkedIn_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Submitted_At__c</fullName>
    <label>LinkedIn Submitted At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>