src/base/objects/Lead/fields/Newsletter_Signup__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Signup</label>
    <type>Checkbox</type>
</CustomField>