src/base/objects/Lead/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Delegations</fullName>
            </value>
            <value>
                <fullName>Participation</fullName>
            </value>
            <value>
                <fullName>Wallet-as-a-Service</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
                <isActive>false</isActive>
                <label>Node</label>
            </value>
            <value>
                <fullName>Query &amp; Transact</fullName>
                <isActive>false</isActive>
                <label>Query &amp; Transact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>