src/base/objects/Lead/fields/Protocol_Interest__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Interest__c</fullName>
    <description>This is the Lead&apos;s main protocol of interest.</description>
    <label>Protocol Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protocol_List</valueSetName>
    </valueSet>
</CustomField>