src/base/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>[SFCC-396] Lead Region based on Countries of Incorporation</description>
    <inlineHelpText>Region is based on Countries of Incorporation. If multiple countries from different Regions are selected, then Region is Global.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>