src/base/objects/Lead/fields/Social_Followers__c.field-meta.xml
<CustomField>
    <fullName>Social_Followers__c</fullName>
    <label>Social Followers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Social_Followers</valueSetName>
    </valueSet>
</CustomField>