src/base/objects/Lead/fields/Stage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Stage_Notes__c</fullName>
    <description>[SFCC-576]: Ecosystem Wallet Lead Record Type Field</description>
    <inlineHelpText>Input notes to provide current status context.</inlineHelpText>
    <label>Stage Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>