src/base/objects/Lead/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institutional Investor</fullName>
            </value>
            <value>
                <fullName>Financial Service - Traditional</fullName>
            </value>
            <value>
                <fullName>Financial Service - Crypto Native</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>