src/base/objects/Lead/fields/utm_Campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_Campaign__c</fullName>
    <label>utm_Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>