src/base/objects/Lead/fields/utm_Medium__c.field-meta.xml
<CustomField>
    <fullName>utm_Medium__c</fullName>
    <label>utm_Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>