src/base/objects/Lead/fields/utm_Source__c.field-meta.xml
<CustomField>
    <fullName>utm_Source__c</fullName>
    <label>utm_Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>