src/base/objects/Lead/fields/WTL_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>WTL_Product_Interest__c</fullName>
    <label>Product Interest (Web To Lead)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Indexers</fullName>
            </value>
            <value>
                <fullName>Participate or Delegate</fullName>
            </value>
            <value>
                <fullName>Wallet SDK</fullName>
            </value>
            <value>
                <fullName>Coinbase Pay SDK</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Exchange &amp; Pro APIs</fullName>
            </value>
            <value>
                <fullName>Sign in with Coinbase</fullName>
            </value>
            <value>
                <fullName>Prime APIs</fullName>
            </value>
            <value>
                <fullName>Rosetta</fullName>
            </value>
            <value>
                <fullName>Query &amp; Transact</fullName>
            </value>
            <value>
                <fullName>Staking</fullName>
            </value>
            <value>
                <fullName>Wallet-as-a-Service</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
                <isActive>false</isActive>
                <label>Node</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>