src/base/objects/Lead/fields/WTL_Protocol_Interest__c.field-meta.xml
<CustomField>
    <fullName>WTL_Protocol_Interest__c</fullName>
    <label>Protocol Interest (Web To Lead)</label>
    <type>TextArea</type>
</CustomField>