src/base/objects/Lead/recordTypes/Algorand_Lead.recordType-meta.xml
<RecordType>
    <fullName>Algorand_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Algorand lead.</description>
    <label>Algorand Lead</label>
</RecordType>