src/base/objects/Lead/recordTypes/Avalanche_Lead.recordType-meta.xml
<RecordType>
    <fullName>Avalanche_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Avalanche lead.</description>
    <label>Avalanche Lead</label>
</RecordType>