src/base/objects/Lead/recordTypes/Bitcoin_Cash_Lead.recordType-meta.xml
<RecordType>
    <fullName>Bitcoin_Cash_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Bitcoin Cash lead.</description>
    <label>Bitcoin Cash Lead</label>
</RecordType>