src/base/objects/Lead/recordTypes/Bitcoin_Lead.recordType-meta.xml
<RecordType>
    <fullName>Bitcoin_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Bitcoin lead.</description>
    <label>Bitcoin Lead</label>
</RecordType>