src/base/objects/Lead/recordTypes/Bitcoin_SV_Lead.recordType-meta.xml
<RecordType>
    <fullName>Bitcoin_SV_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Bitcoin SV lead.</description>
    <label>Bitcoin SV Lead</label>
</RecordType>