src/base/objects/Lead/recordTypes/BSC_Lead.recordType-meta.xml
<RecordType>
    <fullName>BSC_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a BSC lead.</description>
    <label>BSC Lead</label>
</RecordType>