src/base/objects/Lead/recordTypes/Business_Development_Partnerships.recordType-meta.xml
<RecordType>
    <fullName>Business_Development_Partnerships</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Business Development &amp; Partnerships</label>
</RecordType>