src/base/objects/Lead/recordTypes/Cardano_Lead.recordType-meta.xml
<RecordType>
    <fullName>Cardano_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Cardano lead.</description>
    <label>Cardano Lead</label>
</RecordType>