src/base/objects/Lead/recordTypes/CBDC_Lead.recordType-meta.xml
<RecordType>
    <fullName>CBDC_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>Leads from the Central Bank Digital Currencies report</description>
    <label>CBDC Lead</label>
</RecordType>