src/base/objects/Lead/recordTypes/Celo_Lead.recordType-meta.xml
<RecordType>
    <fullName>Celo_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Celo lead.</description>
    <label>Celo Lead</label>
</RecordType>