src/base/objects/Lead/recordTypes/Compound_Lead.recordType-meta.xml
<RecordType>
    <fullName>Compound_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Compound lead.</description>
    <label>Compound Lead</label>
</RecordType>