src/base/objects/Lead/recordTypes/Cosmos_Lead.recordType-meta.xml
<RecordType>
    <fullName>Cosmos_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Cosmos lead.</description>
    <label>Cosmos Lead</label>
</RecordType>