src/base/objects/Lead/recordTypes/Crypto_com_Lead.recordType-meta.xml
<RecordType>
    <fullName>Crypto_com_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Crypto.com lead.</description>
    <label>Crypto.com Lead</label>
</RecordType>