src/base/objects/Lead/recordTypes/Decred_Lead.recordType-meta.xml
<RecordType>
    <fullName>Decred_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Decred lead.</description>
    <label>Decred Lead</label>
</RecordType>