src/base/objects/Lead/recordTypes/Diem_Lead.recordType-meta.xml
<RecordType>
    <fullName>Diem_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Diem lead.</description>
    <label>Diem Lead</label>
</RecordType>