src/base/objects/Lead/recordTypes/Dogecoin_Lead.recordType-meta.xml
<RecordType>
    <fullName>Dogecoin_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Dogecoin lead.</description>
    <label>Dogecoin Lead</label>
</RecordType>