src/base/objects/Lead/recordTypes/Edgeware_Lead.recordType-meta.xml
<RecordType>
    <fullName>Edgeware_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Edgeware lead.</description>
    <label>Edgeware Lead</label>
</RecordType>