src/base/objects/Lead/recordTypes/EOS_Lead.recordType-meta.xml
<RecordType>
    <fullName>EOS_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an EOS lead.</description>
    <label>EOS Lead</label>
</RecordType>