src/base/objects/Lead/recordTypes/Eth2_Lead.recordType-meta.xml
<RecordType>
    <fullName>Eth2_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Eth2 lead.</description>
    <label>Eth2 Lead</label>
</RecordType>