src/base/objects/Lead/recordTypes/Ethereum_1.recordType-meta.xml
<RecordType>
    <fullName>Ethereum_1</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Ethereum 1.x lead.</description>
    <label>Ethereum 1</label>
</RecordType>