src/base/objects/Lead/recordTypes/Ethereum_Classic_Lead.recordType-meta.xml
<RecordType>
    <fullName>Ethereum_Classic_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Ethereum Classic lead.</description>
    <label>Ethereum Classic Lead</label>
</RecordType>