src/base/objects/Lead/recordTypes/Evmos_Lead.recordType-meta.xml
<RecordType>
    <fullName>Evmos_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Evmos lead.</description>
    <label>Evmos Lead</label>
</RecordType>