src/base/objects/Lead/recordTypes/Flow_Lead.recordType-meta.xml
<RecordType>
    <fullName>Flow_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Flow lead.</description>
    <label>Flow Lead</label>
</RecordType>