src/base/objects/Lead/recordTypes/Helium_Lead.recordType-meta.xml
<RecordType>
    <fullName>Helium_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <label>Helium Lead</label>
</RecordType>