src/base/objects/Lead/recordTypes/Karura_Acala_Lead.recordType-meta.xml
<RecordType>
    <fullName>Karura_Acala_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Karura/Acala lead.</description>
    <label>Karura/Acala Lead</label>
</RecordType>