src/base/objects/Lead/recordTypes/Keep_Lead.recordType-meta.xml
<RecordType>
    <fullName>Keep_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Keep lead.</description>
    <label>Keep Lead</label>
</RecordType>