src/base/objects/Lead/recordTypes/Kusama_Lead.recordType-meta.xml
<RecordType>
    <fullName>Kusama_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Kusama lead.</description>
    <label>Kusama Lead</label>
</RecordType>