src/base/objects/Lead/recordTypes/Litecoin_Lead.recordType-meta.xml
<RecordType>
    <fullName>Litecoin_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Litecoin lead.</description>
    <label>Litecoin Lead</label>
</RecordType>