src/base/objects/Lead/recordTypes/Livepeer_Lead.recordType-meta.xml
<RecordType>
    <fullName>Livepeer_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Livepeer lead.</description>
    <label>Livepeer Lead</label>
</RecordType>