src/base/objects/Lead/recordTypes/Mina_Lead.recordType-meta.xml
<RecordType>
    <fullName>Mina_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Mina lead.</description>
    <label>Mina Lead</label>
</RecordType>