src/base/objects/Lead/recordTypes/NEAR_Lead.recordType-meta.xml
<RecordType>
    <fullName>NEAR_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a NEAR lead.</description>
    <label>NEAR Lead</label>
</RecordType>