src/base/objects/Lead/recordTypes/NuCypher_Lead.recordType-meta.xml
<RecordType>
    <fullName>NuCypher_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a NuCypher lead.</description>
    <label>NuCypher Lead</label>
</RecordType>