src/base/objects/Lead/recordTypes/Oasis_Lead.recordType-meta.xml
<RecordType>
    <fullName>Oasis_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Oasis lead.</description>
    <label>Oasis Lead</label>
</RecordType>