src/base/objects/Lead/recordTypes/Ontology_Lead.recordType-meta.xml
<RecordType>
    <fullName>Ontology_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Ontology lead.</description>
    <label>Ontology Lead</label>
</RecordType>