src/base/objects/Lead/recordTypes/Osmosis_Lead.recordType-meta.xml
<RecordType>
    <fullName>Osmosis_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is an Osmosis lead.</description>
    <label>Osmosis Lead</label>
</RecordType>