src/base/objects/Lead/recordTypes/Polkadot_Lead.recordType-meta.xml
<RecordType>
    <fullName>Polkadot_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Polkadot lead.</description>
    <label>Polkadot Lead</label>
</RecordType>