src/base/objects/Lead/recordTypes/Provenance_Lead.recordType-meta.xml
<RecordType>
    <fullName>Provenance_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Provenance lead.</description>
    <label>Provenance Lead</label>
</RecordType>