src/base/objects/Lead/recordTypes/Solana_Lead.recordType-meta.xml
<RecordType>
    <fullName>Solana_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Solana lead.</description>
    <label>Solana Lead</label>
</RecordType>