src/base/objects/Lead/recordTypes/Terra_Lead.recordType-meta.xml
<RecordType>
    <fullName>Terra_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Terra lead.</description>
    <label>Terra Lead</label>
</RecordType>