src/base/objects/Lead/recordTypes/Tezos_Lead.recordType-meta.xml
<RecordType>
    <fullName>Tezos_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Tezos lead.</description>
    <label>Tezos Lead</label>
</RecordType>