src/base/objects/Lead/recordTypes/The_Graph_Lead.recordType-meta.xml
<RecordType>
    <fullName>The_Graph_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a The Graph lead</description>
    <label>The Graph Lead</label>
</RecordType>