src/base/objects/Lead/recordTypes/TRON_Lead.recordType-meta.xml
<RecordType>
    <fullName>TRON_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a TRON lead.</description>
    <label>TRON Lead</label>
</RecordType>