src/base/objects/Lead/recordTypes/Unspecified_Lead.recordType-meta.xml
<RecordType>
    <fullName>Unspecified_Lead</fullName>
    <active>true</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a lead with an unspecified or non-singular interest.</description>
    <label>Unspecified Lead</label>
</RecordType>