src/base/objects/Lead/recordTypes/Zcash_Lead.recordType-meta.xml
<RecordType>
    <fullName>Zcash_Lead</fullName>
    <active>false</active>
    <businessProcess>Main Leads Process</businessProcess>
    <description>This is a Zcash lead.</description>
    <label>Zcash Lead</label>
</RecordType>