src/base/objects/Lead/validationRules/Block_Conversion_If_Customer_Tier_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Conversion_If_Customer_Tier_Blank</fullName>
    <active>true</active>
    <description>Customer tier is required at the time of lead conversion for all record types</description>
    <errorConditionFormula>AND(
IsConverted,
ISBLANK(TEXT(Customer_Tier__c))
)</errorConditionFormula>
    <errorMessage>Customer Tier should be entered before lead conversion!</errorMessage>
</ValidationRule>