src/base/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(FirstName), $Profile.Name == &apos;Standard User&apos;,  RecordType.DeveloperName == &apos;Standard_Lead&apos;)</errorConditionFormula>
    <errorMessage>First Name is required.</errorMessage>
</ValidationRule>