src/base/objects/Lead/validationRules/Lead_Close_Reason_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Close_Reason_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     ISPICKVAL(Status, &quot;Closed&quot;),
     ISPICKVAL(Lead_Close_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Lead_Close_Reason__c</errorDisplayField>
    <errorMessage>Lead Close Reason must be selected if lead is Closed or Closed Lost</errorMessage>
</ValidationRule>